--- a/style.css
+++ b/style.css
@@ -52,3 +52,35 @@ a {
     width: 100px;
     border: solid 1px;
 }
+
+.head {
+    display: flex;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    background: #F6BB80;
+}
+
+.headimg {
+    width: 100%;
+    height: 100%;
+}
+
+.headtxt {
+    padding-left: 20px;
+    margin-top: 100px;
+}
+
+.what {
+    background: black;
+    color: white;
+    width: 300px;
+    display: flex;
+    padding: 12px;
+    text-align: center;
+}
+
+.what i {
+    margin-left: 5px;
+    margin-bottom: 5px;
+    padding-right: 100px;
+}
